# fullstack-blog-rs

backend/: Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.yml  reset.sh  watch.sh
backend/migrations/2021-12-28-192832_create_blog_db/: up.sql
backend/src/: config.rs  database.rs  handlers.rs  lib.rs  main.rs  responses.rs  schema.rs
backend/src/api/: auth.rs  dto.rs
backend/src/models/: comment.rs  post.rs  user.rs
backend/src/services/: auth.rs  post.rs
