[package]
name = "backend"
version = "0.1.0"
authors = ["espectro93 <gerdes.steffen@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
argon2rs = "0.2"
rocket = "0.5.0-rc.1"
dotenv = "0.15.0"
diesel = { version = "1.4", features = ["postgres", "uuidv07", "chrono", "serde_json"] }
serde = "1"
serde_json = "1"
serde_derive = "1"
validator = "0.14"
validator_derive = "0.14"
ring = "0.13"
rand = "0.7"

[dev-dependencies]
quickcheck = "0.9"
speculate = "0.1"
parking_lot = { version = "0.11", features = ["nightly"] }

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["json", "diesel_postgres_pool"]

[features]
default = []