[package]
name = "backend"
version = "0.1.0"
authors = ["espectro93 <gerdes.steffen@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json", "uuid"] }
diesel = { version = "1.4", features = ["postgres", "uuidv07", "chrono", "serde_json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.73"
chrono = { version = "0.4.19", features = ["serde"]}
argon2rs = "0.2.5"
rand = "0.8.4"
ring = "0.17.0-alpha.11"

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default-features = false
features = ["diesel_postgres_pool"]
